# phemap

./: .travis.yml  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/inc/communication/: msg1.h  msg2.h  msg3.h
code/inc/phemap/: authenticateSkeleton.h  device.h  deviceManager.h  deviceProxy.h  deviceSkeleton.h  phemap.h  verifier.h  verifierProxy.h
code/inc/puf/: dummyPuf.h  pufChain.h  pufChainFromFile.h  utils.h
code/resources/: deviceLinks.txt
code/src/: CMakeLists.txt  verifier.cpp
code/src/communication/: CMakeLists.txt  msg1.cpp  msg2.cpp  msg3.cpp
code/src/phemap/: device.cpp  deviceManager.cpp  deviceProxy.cpp  deviceServer.cpp  deviceSkeleton.cpp  verifier.cpp  verifierServer.cpp
code/src/puf/: puf.cpp  pufChainFromFile.cpp
inc/phemap/: deviceServer.h  md5.h  verifierServer.h  verifierSkeleton.h
inc/puf/: puf.h
src/: chainMaker.cpp  device.cpp
src/phemap/: CMakeLists.txt  md5.cpp  verifierProxy.cpp
src/puf/: CMakeLists.txt  dummyPuf.cpp  pufChain.cpp  utils.c
